--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
 
     <!-- for Reproducible Builds -->
     <project.build.outputTimestamp>2022-11-05T20:35:16Z</project.build.outputTimestamp>
+    <junit.version>5.9.2</junit.version>
   </properties>
 
   <!-- Alas, need to include snapshot reference since otherwise can not find
@@ -71,7 +72,20 @@ com.fasterxml.jackson.core.*;version=${project.version}
     </repository>
   </repositories>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <build>
+
     <plugins>
 
       <!-- 26-Aug-2019, tatu: JaCoCo for code coverage -->
@@ -236,13 +250,11 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
-      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
