--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.15.0-SNAPSHOT</version>
+    <version>2.15.0-rc1-SNAPSHOT</version>
   </parent>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.15.0-SNAPSHOT</version>
+  <version>2.15.0-rc1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <licenses>
@@ -43,9 +43,10 @@
          Baseline compatibility:
          * Jackson 2.13 compatible with Android SDK 19 and up
          * Jackson 2.14 compatible with Android SDK 26 and up
+         * Jackson 2.15 compatible with Android SDK 26 and up
       -->
     <version.android.sdk>26</version.android.sdk>
-    <version.android.sdk.signature>0.5.0</version.android.sdk.signature>
+    <version.android.sdk.signature>0.5.1</version.android.sdk.signature>
 
     <osgi.export>com.fasterxml.jackson.core;version=${project.version},
 com.fasterxml.jackson.core.*;version=${project.version}
