--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
   <version>3.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
-  <inceptionYear>2008</inceptionYear>
+  <inceptionYear>2007</inceptionYear>
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -45,12 +45,11 @@
     <osgi.export>tools.jackson.core;version=${project.version},
 tools.jackson.core.*;version=${project.version}
     </osgi.export>
+    <osgi.import>!ch.randelshofer.fastdoubleparser, *</osgi.import>
+
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>tools/jackson/core/json</packageVersion.dir>
     <packageVersion.package>${project.groupId}.json</packageVersion.package>
-
-    <!-- Bnd annotations for generating extra OSGi metadata. -->
-    <version.bnd.annotation>6.3.1</version.bnd.annotation>
 
     <!-- for Reproducible Builds -->
     <project.build.outputTimestamp>2022-11-27T00:00:00Z</project.build.outputTimestamp>
@@ -187,6 +186,18 @@ tools.jackson.core.*;version=${project.version}
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Multi-Release>true</Multi-Release>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+
       <!-- 16-Nov-2022, tatu: [core#838] add verification of compatibility
            wrt Android SDK versions using AnimalSniffer with "gummy bears" signatures.
            To be run from CI, but manually with:
@@ -208,8 +219,7 @@ tools.jackson.core.*;version=${project.version}
   </build>
 
   <dependencies>
-    <!-- 29-Nov-2022, tatu: As per [core#843] we now shade in fastdoubleparser
-      -->
+    <!-- 29-Nov-2022, tatu: As per [core#843] we now shade in fastdoubleparser -->
     <dependency>
       <groupId>ch.randelshofer</groupId>
       <artifactId>fastdoubleparser</artifactId>
