More tweaking to make #844 work.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,10 @@ jobs:
         # The following command will only succeed if the preparation was done via the
         # release.sh script.
         run: ./mvnw -B -q -ff -ntp release:perform -DlocalCheckout=true
+	env:
+	  CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
+	  CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
+	  MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       - name: Generate hash
         id: hash
         run: |
