--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.15.0-rc2-SNAPSHOT</version>
+  <version>2.15.0-rc2</version>
   <packaging>jar</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <licenses>
@@ -58,7 +58,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <packageVersion.package>${project.groupId}.json</packageVersion.package>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2023-03-28T22:22:09Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2023-03-28T22:26:59Z</project.build.outputTimestamp>
   </properties>
 
   <!-- Alas, need to include snapshot reference since otherwise can not find
