--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.15.0-SNAPSHOT</version>
+    <version>2.15.0-rc3</version>
   </parent>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.15.0-SNAPSHOT</version>
+  <version>2.15.0-rc3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <licenses>
@@ -30,7 +30,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
     <url>https://github.com/FasterXML/jackson-core</url>
-    <tag>jackson-core-2.15.0-rc2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
