--- a/pom.xml
+++ b/pom.xml
@@ -317,6 +317,11 @@ com.fasterxml.jackson.core.*;version=${project.version}
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
