--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,11 @@ com.fasterxml.jackson.core.*;version=${project.version}
       <artifactId>fastdoubleparser</artifactId>
       <version>0.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jctools</groupId>
+      <artifactId>jctools-core</artifactId>
+      <version>4.0.1</version>
+    </dependency>
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.vintage</groupId>
