--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
                   <artifact>ch.randelshofer:fastdoubleparser</artifact>
                   <excludes>
                     <exclude>META-INF/versions/**/module-info.*</exclude>
+                    <exclude>META-INF/versions/22/**/*.*</exclude>
                   </excludes>
                 </filter>
               </filters>
@@ -215,8 +216,8 @@ com.fasterxml.jackson.core.*;version=${project.version}
                   <shadedPattern>META-INF/versions/17/com/fasterxml/jackson/core/io/doubleparser</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>META-INF/versions/19/ch/randelshofer/fastdoubleparser</pattern>
-                  <shadedPattern>META-INF/versions/19/com/fasterxml/jackson/core/io/doubleparser</shadedPattern>
+                  <pattern>META-INF/versions/21/ch/randelshofer/fastdoubleparser</pattern>
+                  <shadedPattern>META-INF/versions/21/com/fasterxml/jackson/core/io/doubleparser</shadedPattern>
                 </relocation>
               </relocations>
             </configuration>
