--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>3.5.1</version>
         <configuration>
           <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
           <createDependencyReducedPom>true</createDependencyReducedPom>
@@ -181,6 +182,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
                   <artifact>ch.randelshofer:fastdoubleparser</artifact>
                   <excludes>
                     <exclude>META-INF/versions/**/module-info.*</exclude>
+                    <exclude>META-INF/versions/22/**/*.*</exclude>
                   </excludes>
                 </filter>
               </filters>
@@ -214,8 +216,8 @@ com.fasterxml.jackson.core.*;version=${project.version}
                   <shadedPattern>META-INF/versions/17/com/fasterxml/jackson/core/io/doubleparser</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>META-INF/versions/19/ch/randelshofer/fastdoubleparser</pattern>
-                  <shadedPattern>META-INF/versions/19/com/fasterxml/jackson/core/io/doubleparser</shadedPattern>
+                  <pattern>META-INF/versions/21/ch/randelshofer/fastdoubleparser</pattern>
+                  <shadedPattern>META-INF/versions/21/com/fasterxml/jackson/core/io/doubleparser</shadedPattern>
                 </relocation>
               </relocations>
             </configuration>
@@ -305,7 +307,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <dependency>
       <groupId>ch.randelshofer</groupId>
       <artifactId>fastdoubleparser</artifactId>
-      <version>0.9.0</version>
+      <version>1.0.0</version>
     </dependency>
     <!-- Test dependencies -->
     <dependency>
